part 4 Basic CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a class="nav-wrapper" href="#">Home</a>
                     </li>
                     <li class="nav-list-item">
-                        <select class="nav-wrapapp" name="Categories" id="">
+                        <select class="nav-wrapper header-categories" name="Categories" id="">
                             <option value="1">Categories</option>
                             <option value="2">Desing</option>
                             <option value="3">Development</option>
@@ -375,9 +375,9 @@
                     <p class="investor-text">Join us and get tips & tricks to become a great Designer and Developer</p>
                 </div>
 
-                <form action="">
+                <form action="" class="investor-form">
                     <label>
-                        <input type="email" placeholder="Enter your email...">
+                        <input class="investor-input" type="email" placeholder="Enter your email...">
                     </label>
 
                     <button class="button-join-us">Join Us</button>
@@ -400,7 +400,7 @@
             </div>
             
             <div class="contact-us">
-                <h4 class="contact-title">Contact Us</h4>
+                <h4 class="footer-title">Contact Us</h4>
                 <ul class="contact-list">
                     <li class="contact-item">
                         <a class="footer-item" href="tel:+621987463">+621987463</a>
