Part 4 (1/?) flex-box

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </p>
                 </div>
                 
-                <form action="">
+                <form action="" class="form-first">
                     <label class="first-section-input">
                         <input class="first-input" type="text" placeholder="find more than 430+ tools...">
                     </label>
@@ -363,8 +363,24 @@
         </section>
 
         <div class="section-reviews">
-            <div class="img-man">
-                <img src="img/man.png" alt="man">
+            <div class="container">
+                <div class="img-man">
+                    <img src="img/man.png" alt="man">
+                </div>
+
+                <div class="slider">
+                    <ul class="slider-list">
+                        <li class="slider-item">
+                            <div class="disactive-slider"></div>
+                        </li>
+                        <li class="slider-item">
+                            <div class="active-slider"></div>
+                        </li>
+                        <li class="slider-item">
+                            <div class="disactive-slider"></div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
