--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
             <div class="all-footer-sections">
                 <div class="footer-info">
                     <div class="footer-logo">
-                        <img src="img/orange-logo.png" alt="orange-logo">
+                        <a href="index.html">
+                            <img src="img/orange-logo.png" alt="orange-logo">
+                        </a>
                     </div>
                 
                     <h4 class="copiright">Copyright 2021. Antools</h4>
