--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header-section container">
-            <a href="index.html">
+            <a href="index.html" class="link-white-logo">
                 <img class="white-logo" src="img/white-logo.png" alt="logo">
             </a>
 
@@ -381,9 +381,23 @@
         </section>
 
         <div class="section-reviews">
-            <div class="container">
+            <div class="man-border container">
+                <div class="chevron-right">
+                    <img src="img/chevronright.png" alt="">
+                </div>
+
                 <div class="img-man">
                     <img src="img/man.png" alt="man">
+                </div>
+
+                <div class="section-man-text">
+                    <p class="man-text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint
+                    occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur
+                    veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</p>
+                </div>
+                    
+                <div class="chevron-left">
+                    <img src="img/chevron-left.png" alt="">
                 </div>
             </div>
         </div>
