--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     </li>
                     <li class="nav-list-item">
                         <select class="nav-wrapper header-categories" name="Categories">
-                            <option value="1">Categories</option>
-                            <option value="2">Desing</option>
-                            <option value="3">Development</option>
+                            <option class="option" value="1">Categories</option>
+                            <option class="option" value="2">Desing</option>
+                            <option class="option" value="3">Development</option>
                         </select>
                     </li>
                     <li class="nav-list-item">
