part 7 2/? (option id)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     </li>
                     <li class="nav-list-item">
                         <select class="nav-wrapper header-categories" name="Categories">
-                            <option class="option" value="1">Categories</option>
-                            <option class="option" value="2">Desing</option>
-                            <option class="option" value="3">Development</option>
+                            <option id="option" value="1">Categories</option>
+                            <option id="option" value="2">Desing</option>
+                            <option id="option" value="3">Development</option>
                         </select>
                     </li>
                     <li class="nav-list-item">
